# torch-cpp-example

./: CMakeLists.txt  README.md  env.bat  main.cpp
cmake/: BuildType.cmake
